--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@ body {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
+}
+
+header{
+    background-color: white;
+    font-size: 18px;
 }
 
 h1{
@@ -23,22 +29,18 @@ nav ul{
 nav li{
     float: left;
     position: relative;
-    bottom: 50px;
+    bottom:60px;
     left: 500px;
     text-align: right;
-    padding-right: 20px;
-    
-    
-    
-    
-   
+    padding-right: 20px;   
 }
 
 li a{
     text-decoration: none;
-    word-wrap: normal;
-    
-   
-    
-    
+    word-wrap: normal;   
+}
+
+.overview-hero-image img{
+    height: 125px;
+    width: 125px;
 }
